--- a/index .html
+++ b/index .html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"
-<head>
+   <head>
+       <meta charset="UTF-8">
+	   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	   <title>Project 1, Onboarding 
+	   <link rel="stylesheet" href="css/reset.css"
+	   <link rel="stylesheet" href="css/style.css"
+	   <script src="js/script.js" defer></script>
+	</head>
+	<body>
+	   
+	   
