--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <label for="email">Email Address</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="password">Password</label>
+                <label for="password">Create Password</label>
                 <input type="password" id="password" name="password" required>
 
                 <button type="submit">Sign up</button>
