Update index.html Made <script> asynchronous (async instead of defer)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Project 1, Onboarding</title>
     <link rel="stylesheet" href="css/meyers_and_normalize-form_reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <script src="js/script.js" async></script>
 </head>
 <body>
     <main class="container">
