Update index.html (Added method="get", action="#null", and autocomplete="on" to <form>)

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 <body>
     <main class="container">
         <section class="signup-box">
-            
-			
-			<h1>Join our White Sox community!</h1>
+            <h1>Join our White Sox community!</h1>
             <p>Sign up to get exclusive access to season tickets, team news/rumors, and much more!</p>
-            <form id="signup-form">
+            <form id="signup-form" method="get" action="#null" autocomplete="on">>
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" required>
 
