Update index.html ( Fixed indentation, 2 spaces per level and Remove unnecessary empty lines)

--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1, Onboarding</title>
-    <link rel="stylesheet" href="css/meyers_and_normalize-form_reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" async></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project 1, Onboarding</title>
+  <link rel="stylesheet" href="css/meyers_and_normalize-form_reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js" async></script>
 </head>
 <body>
-    <main class="container">
-        <section class="signup-box">
-            <h1>Join our White Sox community!</h1>
-            <p>Sign up to get exclusive access to season tickets, team news/rumors, and much more!</p>
-            <form id="signup-form" method="get" action="#null" autocomplete="on">>
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" required>
+  <main class="container">
+    <section class="signup-box">
+      <h1>Join our White Sox community!</h1>
+      <p>Sign up to get exclusive access to season tickets, team news/rumors, and much more!</p>
+      
+      <form id="signup-form" method="get" action="#null" autocomplete="on">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" required>
 
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" required>
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" required>
 
-                <label for="password">Create Password</label>
-                <input type="password" id="password" name="password" required>
+        <label for="password">Create Password</label>
+        <input type="password" id="password" name="password" required>
 
-                <button type="submit">Sign up</button>
-            </form>
-            
-			
-			<p id="feedback"></p>
-        </section>
-    </main>
+        <button type="submit">Sign up</button>
+      </form>
+
+      <p id="feedback"></p>
+    </section>
+  </main>
 </body>
 </html>
