--- a/index.html
+++ b/index.html
@@ -31,3 +31,7 @@
   </main>
 </body>
 </html>
+
+<img class="right-image" src="images/chicago_white_sox_logo_jersey_.png" alt="White Sox Logo Jersey">
+</body>
+</html>
