Update index.html (Adding a </div>)

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
   </main>
 
   <img class="right-image" src="images/chicago_white_sox_logo_jersey_.png" alt="White Sox Logo Jersey">
+  </div>
 </body>
 </html>
