--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="signup-box">
       <h1>Join our White Sox community!</h1>
       <p>Sign up to get exclusive access to season tickets, team news/rumors, and much more!</p>
-
+      
       <form id="signup-form" method="get" action="#null" autocomplete="on">
         <label for="name">Full Name</label>
         <input type="text" id="name" name="name" required>
@@ -30,3 +30,8 @@
       <p id="feedback"></p>
     </section>
   </main>
+
+  
+  <img src="images/chicago_white_sox_logo_jersey_.png" alt="White Sox Logo" class="right-image">
+</body>
+</html>
